chore: ignore GroundingDINO/* and segment-anything/*

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,24 @@
-GroundingDINO/
-segment-anything/
+GroundingDINO/*
+!GroundingDINO/.gitmodules
+!GroundingDINO/.git
+
+segment-anything/*
+!segment-anything/.gitmodules
+!segment-anything/.git
+
 .DS_Store
+
 *.jpg
 *.jpeg
 *.pt
 *.pth
+
 .env
+
+__pycache__/
+*.py[cod]
+*.egg-info/
+
+.vscode/
+
+.ipynb_checkpoints/
